--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx}",
+      "!src/index.js"
+    ]
+  },
   "name": "landing-page",
   "version": "0.1.0",
   "private": true,
